<resources>
    <string name="app_name">乐其英语</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">单词</string>
    <string name="title_notifications">我的</string>


    <string name="word_detail_save">加入单词本</string>

    <string name="user_board_text_recit">已背诵(分钟)</string>
    <string name="puntch">打卡</string>
    <string name="recite_words">背单词</string>

    <string name="recite">背诵</string>


    <string name="my_recite_article">我的背诵(0)</string>
    <string name="add_recite_article">添加背诵文章</string>
    <string name="show_all_recite_article">查看全部></string>
    <string name="show_all_recited_article">查看已背诵></string>

    <string name="add_article_to_recite">添加到我的背诵</string>
    <string name="has_add_article_to_recite">已添加到背诵</string>

    <string name="recommend_article">推荐文章</string>

    <string name="recommend_book">推荐书</string>

    <string name="quit_relogin">退出并重新登录</string>
    <string name="suggestion_contect_hint">邮箱/用户名</string>
    <string name="regist_user_name">用户名(由6-16位数字/大小写字母/下划线组成)</string>

    <string name="regist_password">密码(由6-16位数字/大小写字母/下划线组成)</string>
    <string name="password">密码</string>
    <string name="regist">注册</string>
    <string name="regist_confirm">密码确认</string>
    <string name="login">登录</string>

    <string name="start">开始</string>
    <string name="cancel">取消</string>
    <string name="pause">暂停</string>
    <string name="close">关闭</string>
    <string name="play">播放</string>
    <string name="playing">播放中</string>
    <string name="recording">录音中</string>

    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="suggestion_message_hint">请写下对我们的意见，谢谢</string>

    <string name="letter_numberbl_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW_</string>
    <string name="numberbl_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW_</string>

    <string name="message_regist_success">注册成功！</string>
    <string name="message_regist_fail">注册失败！</string>
    <string name="message_regist_password_not_match">两次密码不符！</string>

    <string name="message_no_username">没有输入用户名！</string>
    <string name="message_no_password">没有输入密码！</string>


    <string name="message_tip_start_record">点击开始录音/播放录音</string>

    <string name="message_tip_start_ding_record">点击开始,叮叮两声后开始录音</string>


    <string name="message_username_unsuitable">用户名应由6-16位数字/大小写字母/下划线组成！</string>
    <string name="message_password_unsuitable">密码应由6-16位数字/大小写字母/下划线组成！</string>

    <string name="message_tip_show_word">点击显示单词</string>


    <string name="tip_choose_has_reciting">点击已经背会的单词</string>

    <string name="check_information">查看详情</string>

    <string name="continue_recite_word">继续背诵单词</string>

    <string name="title_word_recite">单词背诵</string>
    <string name="title_my_word_recite">我的单词背诵</string>
    <string name="title_content_recite">文章背诵</string>

    <string name="title_no_network">没有联网</string>

    <string name="title_search_content">查询文章</string>

    <string name="catalogs">分类：</string>

    <string name="upgreade">是否安装最新版本？</string>
    <string name="install">安装</string>
    <string name="install_next">过会再说</string>
    <string name="install_ignore">忽略</string>

    <string name="regist_quick">快速注册</string>
    <string name="ok">确认</string>


    <string name="warnning">警告</string>

    <string name="is_remove_from_myreciting">是否从背诵列表移除</string>


    <string name="reciting_article">正在背诵</string>

    <string name="recited_article">已经背诵</string>

    <string name="finished">完成</string>

    <string name="back_home">返回主页</string>
    <string name="share_5">分享给朋友</string>

    <string name="slogan1">背演讲，记单词</string>
    <string name="slogan2">就用乐其英语</string>
    <string name="app_rights">版权归乐其英语(www.leqienglish.com)所有</string>



    <string name="notconnectService">无法连接到服务端</string>
</resources>
