<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/view_background"
   >

<RelativeLayout
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/user_reciting_article_top"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
         <TextView
             android:text="@string/my_recite_article"
             android:layout_alignParentLeft="true"
             style="@style/user_reciting_big"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_reciting_show_all"
            android:text="@string/show_all_recite_article"
            style="@style/font_size_12_gray"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <GridView
        android:id="@+id/user_reciting_gridview"
        android:layout_centerVertical="true"
        android:numColumns="5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"></GridView>
    
    <Button
        android:id="@+id/user_reciting_add_button"
        android:text="@string/add_recite_article"
        style="@style/button_white"
        android:background="@drawable/boarder_blue_corner_selected"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
</RelativeLayout>
