<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recite_words_review_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/recite_words_review_tip_message"

        android:layout_centerHorizontal="true"
        android:gravity="center"
        style="@style/font_size_12_gray"
        android:text="@string/tip_choose_has_reciting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<com.leqienglish.view.word.RecitingWordListView
    android:id="@+id/recite_words_review_wordlist"
    android:layout_below="@id/recite_words_review_tip_message"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

</com.leqienglish.view.word.RecitingWordListView>

    
    <LinearLayout

        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    </LinearLayout>

    <Button
        android:id="@+id/recite_words_review_share"
        style="@style/font_size_20_white_bold"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/recite_words_review_continue"
        android:background="@drawable/background_green_corner"
        android:text="@string/share_5" />

    <Button
        android:id="@+id/recite_words_review_continue"
        style="@style/font_size_20_white_bold"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_above="@id/recite_words_review_finished"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_green_corner"
        android:text="@string/continue_recite_word" />

    <Button
        android:id="@+id/recite_words_review_finished"
        style="@style/font_size_20_white_bold"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_red_corner"
        android:text="@string/back_home" />
</RelativeLayout>
